loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:14: error: not found: value blanc
  if (getCouleurSol()==blanc) {
                       ^